124. Let posterRead()/posterWrite() also return the number of bytes read/write
     in the remote case.
123. Fix bounds checks in posterRead()/posterWrite()
122. Add FIO_RESIZE posterIoctl command, for resizing an existing poster.
121. Reconnect regression test to the build after automake switch.
120. Fix built-in posterServ path by using the right automake bindir variable

Version 2.11, 27 october 2011

119. Merge errorLib into portLib.
118. Switch build system to automake.
117. [h2devLib] don't call posterLib functions to free a poster.
116. [posterLib] add posterForget() to invalidate a posterId.

Version 2.10, 3 october 2011

115. New h2logMsg() API for syslog-style logging of events
114. More LP64 fixes, a few places were still using ints for taskIds
113. Activate the code that sets pthread scheduler policy and parameters
     for new tasks if available

Version 2.9, 11 february 2011

112. Implement taskSpawn2() a version of taskSpawn() that takes a single
     void pointer for arguments. This is the only working solution on 
     x86_64 architectures, because of the C calling conventions used there.
111. Implement remotePosterShow().
110. Add a regression test for parameters passig with taskSpawn.
109. Fix logMsg() on LP64 architectures.
108. Produce an error if trying to create a device name longer than 
     H2_DEV_MAX_DEVICE_NAME
107. Make remotePosterLib/posterServ LP64 safe.
106. Change posterServ to use local poster functions only.
105. taskLib: make sure each task gets at least 64k of stack space.

Version 2.8, 22, September, 2010

104. Nuke RCS ids in source files.
103. Call mlockall() in h2initGlob() when running under Xenomai.
102. Go back to pmap_unset() to unregister pre-existing posterServer service.
101. Fixes for building Xenomai support.
100. Fixes for cross-compilation in OpenEmbedded
 99. Display the ntick field of poster's timestamps in posterShow().
 98. Enforce stack size in taskSpawn() using pthread_attr_setstacksize().
