@@ -1,3 +1,5 @@
+125. Make sure smMemRealloc() does not read uninitialized bytes when copying
+     the content of previous memory block.
 124. Let posterRead()/posterWrite() also return the number of bytes read/write
      in the remote case.
 123. Fix bounds checks in posterRead()/posterWrite()
